--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@taquito/tzip16": "^8.1.0",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-use": "^17.2.1"
+    "react-dom": "17.0.2"
   }
 }
